--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Fisify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
+    <style name="Theme.Fisify" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimaryDark">#323444</item>
     </style>
 </resources>
