Fix some details

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,5 +2,6 @@
     <style name="Theme.Fisify" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimaryDark">#ffffff</item>
         <item name="android:navigationBarColor">#ffffff</item>
+        <item name="android:forceDarkAllowed" tools:ignore="NewApi">false</item>
     </style>
 </resources>
